# pydantic-media-type

./: Dockerfile  README.md  docker-compose.cache.json  docker-compose.yml  pyproject.toml
.github/workflows/: cleanup-packages.yml  dependency-review.yaml  publish.yaml  static-analysis.yml  tests.yml
src/pydantic_media_type/: __init__.py
tests/: test_mediatype.py
