[project]
name = "pydantic-media-type"
version = "0.1.0"
description = "Pydantic model for MIME/Media types"
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
]

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
